# lab4-sp

./: CMakeLists.txt  Makefile  README.md  build.ninja  calculator.c  main.c  rules.ninja
